internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-with-metadata.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - example.com
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /v1/example:
              action:
                name: route_list
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                  routes:
                  - match:
                      pathSeparatedPrefix: /v1/example
                      queryParameters:
                      - name: debug
                        stringMatch:
                          exact: "yes"
                    metadata:
                      filterMetadata:
                        envoy-gateway:
                          resources:
                          - annotations:
                              foo: bar
                            kind: HTTPRoute
                            name: first-route-name
                            namespace: first-route-ns
                            sectionName: first-route-rule
                    name: envoy-gateway/httproute-2/rule/0/match/0/example.com
                    route:
                      cluster: first-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
                  - match:
                      pathSeparatedPrefix: /v1/example
                    name: envoy-gateway/httproute-3/rule/0/match/0/example.com
                    route:
                      cluster: second-route-dest
                      upgradeConfigs:
                      - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /v1/example/:
                  action:
                    name: route_list
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.RouteList
                      routes:
                      - match:
                          pathSeparatedPrefix: /v1/example
                          queryParameters:
                          - name: debug
                            stringMatch:
                              exact: "yes"
                        metadata:
                          filterMetadata:
                            envoy-gateway:
                              resources:
                              - annotations:
                                  foo: bar
                                kind: HTTPRoute
                                name: first-route-name
                                namespace: first-route-ns
                                sectionName: first-route-rule
                        name: envoy-gateway/httproute-2/rule/0/match/0/example.com
                        route:
                          cluster: first-route-dest
                          upgradeConfigs:
                          - upgradeType: websocket
                      - match:
                          pathSeparatedPrefix: /v1/example
                        name: envoy-gateway/httproute-3/rule/0/match/0/example.com
                        route:
                          cluster: second-route-dest
                          upgradeConfigs:
                          - upgradeType: websocket
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - annotations:
              foo: bar
            kind: Gateway
            name: first-gateway
            namespace: first-gateway
            sectionName: first-listener
    name: first-listener/example_com
